--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,15 +1,20 @@
 name: Deploy Cook Today! to GitHub Pages
+
 on:
   push:
     branches:
       - main
+
   workflow_dispatch:
+
 jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
+
     steps:
       - name: Checkout my code
         uses: actions/checkout@v3
+
       - name: Set up Node.js environment
         uses: actions/setup-node@v3
         with:
@@ -20,8 +25,10 @@ jobs:
       - name: Build React application
         run: npm run build
         working-directory: client
+
       - name: Deploy to GitHub Pages
-        uses: peaceiris/actions-gh-pages@v3
+        uses: peaceiris/actions-gh-pages@v4
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_dir: ./client/dist
+          force_orphan: true
