--- a/client/package.json
+++ b/client/package.json
@@ -1,6 +1,6 @@
 {
   "name": "client",
-  "homepage": "https://github.com/SamantaInzerilli95/cook-today.git",
+  "homepage": "https://samantainzerilli95.github.io/cook-today/",
   "private": true,
   "version": "0.0.0",
   "type": "module",
