--- a/server/package.json
+++ b/server/package.json
@@ -4,6 +4,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "cd client && npm install && npm run build",
     "start": "node index.js"
   },
   "keywords": [],
@@ -14,6 +15,6 @@
     "axios": "^1.10.0",
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
-    "express": "^5.1.0"
+    "express": "^4.19.2"
   }
 }
