--- a/server/package.json
+++ b/server/package.json
@@ -1,16 +1,16 @@
 {
-  "name": "server",
+  "name": "cook-today-server",
   "version": "1.0.0",
+  "description": "Backend server for Cook Today! application",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "cd client && npm install && npm run build",
-    "start": "node index.js"
+    "build": "cd ../client && npm install && npm run build",
+    "start": "node index.js",
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "description": "",
   "dependencies": {
     "axios": "^1.10.0",
     "cors": "^2.8.5",
